[package]
name = "zvipto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
web3 = "0.18.0"
secp256k1 = { version = "0.24.0", features = ["rand"] }
unicode-width = "0.1.9"
crossterm = "0.25.0"
rand = "0.8.5"
tiny-keccak = { version = "1.4" }
tokio = "1.20.1"